# rapid

./: Cargo.toml  README.md
src/: consts.rs  lib.rs  logger.rs
src/app/: default.rs  mod.rs  run.rs
src/errors/: chained_error_methods.rs  cumulative_error_collector.rs  fail_methods.rs  mod.rs  option_methods.rs  result_methods.rs
src/test_utils/: mod.rs  output_stream.rs
src/utils/: mod.rs  parse_cmd_args.rs
